# devman-runtime

./: LICENSE  README.md
.github/workflows/: publish.yml
python/: README.md  pyproject.toml
python/src/devman_runtime/: __init__.py  client.py  protocol.py  server.py
src/devman_runtime/: __init__.py  client.py  db.py  telegraf.py
